clusters/home/apps/app/papra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papra
  labels:
    app: papra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: papra
  template:
    metadata:
      labels:
        app: papra
    spec:
      containers:
        - name: papra
          image: ghcr.io/papra-hq/papra:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1221
          volumeMounts:
            - name: papra-docs
              mountPath: /app/app-data
      volumes:
        - name: papra-docs
          persistentVolumeClaim:
            claimName: papra-docs
