clusters/home/apps/app/papra/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: papra
  name: papra
spec:
  selector:
    app: papra
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1221
