clusters/home/apps/app/papra/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: papra
spec:
  parentRefs:
    - name: gw-apps
      sectionName: https
  hostnames:
    - docs.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: papra
          port: 80
